# GIAIC-Q3-Agentic-AI

./: README.md
1st-assignment/00_swarm/: SWARM.md  main.py  readme.md
1st-assignment/01_uv/: Readme.md
1st-assignment/01_uv/project2/src/project2/: __init__.py  main.py
1st-assignment/01_uv/simple-project/: main.py
1st-assignment/02_openrouter/open-router/: pyproject.toml
1st-assignment/02_openrouter/open-router/src/open_router/: __init__.py
1st-assignment/03_litellm_openai_agent/01_litellm/litellm_project/: pyproject.toml
1st-assignment/03_litellm_openai_agent/01_litellm/litellm_project/src/litellm_project/: __init__.py  hello.py
2nd-assignment/: README.md
2nd-assignment/04_hello_agent/: readme.md
2nd-assignment/04_hello_agent/asynchello_agent/: main.py  pyproject.toml
2nd-assignment/04_hello_agent/synchello_agent/: main.py  pyproject.toml
2nd-assignment/OpenAI_Agents_SDK_Inner_Workings/: openai_agents_sdk_inner_working.md
2nd-assignment/openai-agent-sdk/: README.md  main.py  pyproject.toml
3rd-assignment/: country_info_toolkit.py  mood_handoff.py  product_suggester.py  pyproject.toml
4th-assignment/: .env  main.py  pyproject.toml  support.py  supportagent.py
5th-assignment/: main.py  pyproject.toml
6th-assignment/: README.md  main.py  pyproject.toml
agentic-ai-foundations/01_uv/: Readme.md
agentic-ai-foundations/01_uv/project2/: pyproject.toml
agentic-ai-foundations/01_uv/project2/src/project2/: __init__.py  main.py
agentic-ai-foundations/01_uv/simple-project/: main.py  pyproject.toml
agentic-ai-foundations/02_openrouter/open-router/: README.md  pyproject.toml
agentic-ai-foundations/03_litellm_openai_agent/: README.md
(+4 files in other folders)
