[project]
name = "open-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shahid Ali", email = "153486921+shahidali54@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.0",
]

[project.scripts]
open-router = "open_router:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
