[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shahid Ali", email = "153486921+shahidali54@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project2 = "project2:main"
start = "project2.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
